--- a/module-1/lab-tuple-set-dict/your-code/challenge-2.ipynb
+++ b/module-1/lab-tuple-set-dict/your-code/challenge-2.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,11 +38,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[51, 88, 84, 47, 21, 86, 37, 99, 89, 59, 2, 70, 97, 94, 95, 79, 68, 75, 42, 87, 71, 83, 9, 16, 26, 66, 3, 93, 29, 18, 13, 17, 63, 85, 27, 10, 11, 1, 92, 22, 81, 41, 40, 32, 60, 20, 72, 34, 50, 73, 12, 48, 53, 52, 7, 54, 65, 55, 5, 0, 69, 96, 91, 90, 35, 30, 39, 23, 14, 49, 77, 64, 4, 74, 56, 67, 76, 25, 8, 28]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "sample_list_1 = random.sample(range(100), 80)\n",
+    "\n",
+    "print(sample_list_1)\n"
    ]
   },
   {
@@ -54,11 +65,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The length is 80\n",
+      "{0, 1, 2, 3, 4, 5, 7, 8, 9, 10, 11, 12, 13, 14, 16, 17, 18, 20, 21, 22, 23, 25, 26, 27, 28, 29, 30, 32, 34, 35, 37, 39, 40, 41, 42, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 59, 60, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 79, 81, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 99}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set1 = set(sample_list_1)\n",
+    "print(\"The length is\", len(set1))\n",
+    "\n",
+    "print(set1)"
    ]
   },
   {
@@ -77,11 +101,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[42, 22, 87, 19, 82, 63, 32, 47, 91, 46, 72, 44, 55, 74, 95, 73, 57, 24, 42, 6, 24, 52, 38, 53, 10, 6, 32, 46, 3, 38, 12, 9, 24, 58, 29, 64, 9, 97, 60, 68, 79, 90, 7, 89, 45, 82, 15, 18, 59, 84, 7, 29, 61, 7, 9, 96, 77, 63, 79, 69, 46, 37, 15, 80, 0, 15, 25, 23, 30, 27, 94, 31, 6, 77, 36, 3, 16, 81, 59, 71]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "sample_list_2 = []\n",
+    "for i in range(0,80):\n",
+    "    sample_list_2.append(random.randint(0, 100))\n",
+    "print(sample_list_2)"
    ]
   },
   {
@@ -93,11 +129,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "58\n",
+      "Es más corto porque los sets no pueden contener elementos duplicados, los elimina para dejar un único valor.\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set2 = set(sample_list_2)\n",
+    "\n",
+    "print(len(set2))\n",
+    "print(\"Es más corto porque los sets no pueden contener elementos duplicados, los elimina para dejar un único valor.\")"
    ]
   },
   {
@@ -109,11 +158,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 4, 5, 8, 11, 13, 14, 17, 20, 21, 26, 28, 34, 35, 39, 40, 41, 48, 49, 50, 51, 54, 56, 65, 66, 67, 70, 75, 76, 83, 85, 86, 88, 92, 93, 99}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set3 = set1.difference(set2)\n",
+    "print(set3)"
    ]
   },
   {
@@ -125,11 +184,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{36, 6, 38, 44, 45, 46, 15, 80, 82, 19, 24, 57, 58, 61, 31}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set4 = set2.difference(set1)\n",
+    "print(set4)\n"
    ]
   },
   {
@@ -141,11 +210,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 3, 7, 9, 10, 12, 16, 18, 22, 23, 25, 27, 29, 30, 32, 37, 42, 47, 52, 53, 55, 59, 60, 63, 64, 68, 69, 71, 72, 73, 74, 77, 79, 81, 84, 87, 89, 90, 91, 94, 95, 96, 97}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set5 = set1.intersection(set2)\n",
+    "print(set5)\n"
    ]
   },
   {
@@ -165,11 +244,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "if set3 == set1.difference(set2):\n",
+    "    print(True)\n",
+    "\n",
+    "if set4 == set2.difference(set1):\n",
+    "    print(True)\n",
+    "    \n",
+    "if set5 == set1.intersection(set2):\n",
+    "    print(True)\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -181,11 +282,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set6 = set()"
    ]
   },
   {
@@ -197,11 +299,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 2, 3, 4, 5, 7, 8, 9, 10, 11, 12, 13, 14, 16, 17, 18, 20, 21, 22, 23, 25, 26, 27, 28, 29, 30, 32, 34, 35, 37, 39, 40, 41, 42, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 59, 60, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 79, 81, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 99}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set6.update(set3)\n",
+    "set6.update(set5)\n",
+    "print(set6)"
    ]
   },
   {
@@ -213,11 +326,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "if set1 == set6:\n",
+    "    print(True)"
    ]
   },
   {
