--- a/module-1/lab-tuple-set-dict/your-code/challenge-1.ipynb
+++ b/module-1/lab-tuple-set-dict/your-code/challenge-1.ipynb
@@ -287,7 +287,9 @@
     "    if letter in tup3:\n",
     "        print(True)\n",
     "    else:\n",
-    "        print(False)\n"
+    "        print(False)\n",
+    "\n",
+    "#El output no tiene sentido! No lo entiendo"
    ]
   },
   {
