--- a/module-1/lab-tuple-set-dict/your-code/challenge-2.ipynb
+++ b/module-1/lab-tuple-set-dict/your-code/challenge-2.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -352,11 +352,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 49,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set1.issubset(set2)\n",
+    "\n",
+    "set1.issubset(set3)\n"
    ]
   },
   {
@@ -370,11 +386,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "agg1 = set3.union(set4, set5)\n",
+    "agg2 = set1.union(set2)\n",
+    "\n",
+    "if agg1 == agg2:\n",
+    "    print(True)\n",
+    "    "
    ]
   },
   {
@@ -386,11 +416,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "popping = set1.pop()\n",
+    "print(popping)\n",
+    "#creo que si haces .pop(0) en un set, eliminas el primer value, pero a mí no me ha funcionado."
    ]
   },
   {
@@ -406,12 +447,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{2, 3, 4, 5, 7, 8, 10, 12, 13, 14, 16, 17, 18, 20, 22, 23, 25, 26, 27, 28, 30, 32, 34, 35, 37, 40, 42, 47, 48, 50, 52, 53, 54, 55, 56, 60, 63, 64, 65, 66, 67, 68, 70, 72, 73, 74, 75, 76, 77, 83, 84, 85, 86, 87, 88, 90, 92, 93, 94, 95, 96, 97}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Your code here\n",
+    "list_to_remove = [1, 9, 11, 19, 21, 29, 31, 39, 41, 49, 51, 59, 61, 69, 71, 79, 81, 89, 91, 99]\n",
+    "\n",
+    "set_to_remove = set(list_to_remove)\n",
+    "\n",
+    "remove = set1 - set_to_remove \n",
+    "\n",
+    "print(remove)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your code here\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
