--- a/module-1/pandas-project/your-code/data-wrangling.ipynb
+++ b/module-1/pandas-project/your-code/data-wrangling.ipynb
@@ -16273,7 +16273,8 @@
     "\n",
     "especie_peligrosa.sort_values(ascending=False)\n",
     "\n",
-    "#Sacamos la conclusión de que la especie más peligrosa o con más tendencia a atacar es el tiburón blanco, que además suele aparecer más por Western Cape Province y California."
+    "#Sacamos la conclusión de que la especie más peligrosa o con más tendencia a atacar es el tiburón blanco, que además suele aparecer más por Western Cape Province y California.\n",
+    "#El tiburón blanco no sólo ataca en EEUU, también en Australia (west & south)."
    ]
   },
   {
