--- a/module-1/lab-string-operations/your-code/main.ipynb
+++ b/module-1/lab-string-operations/your-code/main.ipynb
@@ -32,11 +32,22 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Durante un tiempo no estuvo segura de si su marido era su marido'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "str_list = ['Durante', 'un', 'tiempo', 'no', 'estuvo', 'segura', 'de', 'si', 'su', 'marido', 'era', 'su', 'marido']\n",
     "# Your code here:\n",
-    "\n"
+    "' '.join(str_list)\n"
    ]
   },
   {
@@ -48,13 +59,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Grocery list: bananas, bread, brownie mix, broccoli'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "food_list = ['Bananas', 'Chocolate', 'bread', 'diapers', 'Ice Cream', 'Brownie Mix', 'broccoli']\n",
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "\n",
+    "food_list = [x.lower() for x in food_list]\n",
+    "\n",
+    "\n",
+    "food_list = [x for x in food_list if (x.startswith('b'))]\n",
+    "\n",
+    "listacompra = ', '.join(food_list)\n",
+    "\n",
+    "grocery_list = 'Grocery list: ' + listacompra\n",
+    "\n",
+    "grocery_list"
    ]
   },
   {
@@ -68,9 +101,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The area of the circle with radius: 4.5 is: 63.61725123519331\n"
+     ]
+    }
+   ],
    "source": [
     "import math\n",
     "\n",
@@ -87,9 +128,12 @@
     "    # Sample Output: 78.53981633\n",
     "    \n",
     "    # Your code here:\n",
+    "    return pi*(x**2)\n",
+    "\n",
     "    \n",
-    "    \n",
-    "# Your output string here:"
+    "# Your output string here:\n",
+    "\n",
+    "print(f'{string1} {radius} {string2} {area(radius)}')"
    ]
   },
   {
@@ -105,9 +149,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'also': 1,\n",
+       " 'But': 1,\n",
+       " 'destruction': 1,\n",
+       " 'From': 1,\n",
+       " 'to': 1,\n",
+       " 'who': 1,\n",
+       " 'suffice.': 1,\n",
+       " 'perish': 1,\n",
+       " 'think': 1,\n",
+       " 'fire,': 1,\n",
+       " 'twice,': 1,\n",
+       " 'it': 1,\n",
+       " 'the': 1,\n",
+       " 'what': 1,\n",
+       " 'for': 1,\n",
+       " 'with': 1,\n",
+       " 'if': 1,\n",
+       " 'those': 1,\n",
+       " 'Some': 2,\n",
+       " 'that': 1,\n",
+       " 'say': 3,\n",
+       " 'world': 1,\n",
+       " 'fire.': 1,\n",
+       " 'end': 1,\n",
+       " 'I’ve': 1,\n",
+       " 'of': 2,\n",
+       " 'great': 1,\n",
+       " 'hold': 1,\n",
+       " 'enough': 1,\n",
+       " 'I': 3,\n",
+       " 'know': 1,\n",
+       " 'had': 1,\n",
+       " 'Is': 1,\n",
+       " 'To': 1,\n",
+       " 'would': 1,\n",
+       " 'will': 1,\n",
+       " 'in': 2,\n",
+       " 'favor': 1,\n",
+       " 'desire': 1,\n",
+       " 'ice': 1,\n",
+       " 'hate': 1,\n",
+       " 'ice.': 1,\n",
+       " 'tasted': 1,\n",
+       " 'And': 1}"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "poem = \"\"\"Some say the world will end in fire,\n",
     "Some say in ice.\n",
@@ -120,7 +218,9 @@
     "And would suffice.\"\"\"\n",
     "\n",
     "# Your code here:\n",
-    "\n"
+    "words = poem.split()\n",
+    "\n",
+    "{i:words.count(i) for i in set(words)}"
    ]
   },
   {
@@ -132,9 +232,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['i', 'was', 'angry', 'with', 'my', 'friend', 'i', 'told', 'my', 'wrath', 'my', 'wrath', 'did', 'end', 'i', 'was', 'angry', 'with', 'my', 'foe', 'i', 'told', 'not', 'my', 'wrath', 'did', 'grow', 'i', 'waterd', 'fears', 'night', 'morning', 'with', 'my', 'tears', 'i', 'sunned', 'with', 'smiles', 'with', 'soft', 'deceitful', 'wiles', 'grew', 'both', 'day', 'night', 'till', 'bore', 'apple', 'bright', 'my', 'foe', 'beheld', 'shine', 'he', 'knew', 'that', 'was', 'mine', 'into', 'my', 'garden', 'stole', 'when', 'night', 'had', 'veild', 'pole', 'morning', 'glad', 'i', 'see', 'my', 'foe', 'outstretched', 'beneath', 'tree']\n"
+     ]
+    }
+   ],
    "source": [
     "blacklist = ['and', 'as', 'an', 'a', 'the', 'in', 'it']\n",
     "\n",
@@ -159,6 +267,25 @@
     "My foe outstretched beneath the tree.\"\"\"\n",
     "\n",
     "# Your code here:\n",
+    "\n",
+    "\n",
+    "pattern = '\\w+'\n",
+    "poem = re.findall(pattern, poem)\n",
+    "\n",
+    "lowcase = [x.lower() for x in poem]\n",
+    "\n",
+    "#IN\n",
+    "\n",
+    "#result = list()\n",
+    "#for x in lowcase:\n",
+    "#    if x not in blacklist:\n",
+    "#      result.append(x)\n",
+    "\n",
+    "result = [x for x in lowcase if x not in blacklist]\n",
+    "\n",
+    "print(result)      \n",
+    "        \n",
+    "\n",
     "\n"
    ]
   },
@@ -173,15 +300,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['T', 'P']\n"
+     ]
+    }
+   ],
    "source": [
     "poem = \"\"\"The apparition of these faces in the crowd;\n",
     "Petals on a wet, black bough.\"\"\"\n",
     "\n",
     "# Your code here:\n",
-    "\n"
+    "print(re.findall('[A-Z]', poem))\n"
    ]
   },
   {
@@ -199,7 +334,8 @@
    "source": [
     "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
     "\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "print(re.search('[0-9]', poem))\n"
    ]
   },
   {
@@ -247,7 +383,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
