--- a/module-1/lab-string-operations/your-code/main.ipynb
+++ b/module-1/lab-string-operations/your-code/main.ipynb
@@ -328,14 +328,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['123abc', 'abc123', 'JohnSmith1', 'ABBY4']\n"
+     ]
+    }
+   ],
    "source": [
     "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
     "\n",
     "# Your code here:\n",
-    "print(re.search('[0-9]', poem))\n"
+    "\n",
+    "a = [i for i in data if re.search('[0-9]', i) != None]\n",
+    "\n",
+    "print(a)\n",
+    "\n"
    ]
   },
   {
@@ -351,12 +363,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['123abc']\n"
+     ]
+    }
+   ],
    "source": [
     "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "a = [i for i in data if re.search('[0-9][a-z]', i) != None]\n",
+    "\n",
+    "print(a)\n"
    ]
   },
   {
