final con bonus

--- a/module-1/lab-string-operations/your-code/main.ipynb
+++ b/module-1/lab-string-operations/your-code/main.ipynb
@@ -363,14 +363,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[]\n"
+      "['123abc', 'abc123', 'JohnSmith1']\n"
      ]
     }
    ],
@@ -378,7 +378,7 @@
     "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
     "# Your code here:\n",
     "\n",
-    "a = [i for i in data if re.search('[:alnum:]{data}', i) != None]\n",
+    "a = [i for i in data if re.search('[a-z]', i) != None and re.search('[0-9]', i) != None]\n",
     "\n",
     "print(a)\n"
    ]
