--- a/module-1/lab-object-oriented-programming/your-code/main.ipynb
+++ b/module-1/lab-object-oriented-programming/your-code/main.ipynb
@@ -23,10 +23,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "import numpy as np\n",
     "def twodim(mat):\n",
     "    # This function takes a list of lists and checks that it is of depth 2. \n",
     "    # If the depth is not 2, either return false or return informative errors that let the user know the depth of the list.\n",
@@ -36,27 +48,41 @@
     "    # Sample Output: True\n",
     "    \n",
     "    # Your Code Here:\n",
+    "    np_array_mat = np.array(mat)   \n",
+    "\n",
+    "    if len(np_array_mat.shape) == 2:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
     "    \n",
-    "    "
+    "twodim([[1,2,3], [4,5,6]])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "def twodim(mat):\n",
+    "    np_array_mat = np.array(mat)   \n",
+    "\n",
+    "    if len(np_array_mat.shape) == 2:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "\n",
     "twodim([[1,2], [1,2,3],[1,2,3]])"
    ]
   },
