--- a/module-1/lab-object-oriented-programming/your-code/main.ipynb
+++ b/module-1/lab-object-oriented-programming/your-code/main.ipynb
@@ -101,13 +101,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (<ipython-input-16-5e9689705079>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-16-5e9689705079>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    column = []\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+     ]
+    }
+   ],
    "source": [
     "def twodimrecursive(mat):\n",
     "    # Your code here:\n",
-    "    "
+    "column = []    \n",
+    "    for row in mat:\n",
+    "        column.append(row[2]) \n",
+    "        if len(column)\n",
+    "    return column"
    ]
   },
   {
@@ -289,14 +302,20 @@
     "class Matrix2D:\n",
     "    # First, we will write the __init__ function. \n",
     "    # In this function, we will initialize rows and the columns using the matrix that we have passed to the class.\n",
+    "    import numpy as np\n",
     "    \n",
-    "    def __init__(self, mat):\n",
+    "    def __init__(self, mat, rows, cols, rowcolumn):\n",
     "        # Assign mat to self.mat\n",
     "        # Assign rows and cols to self.rows and self.cols\n",
     "        # To find the rows and the cols, use the rowcolumn function and pass self.mat to the function.\n",
     "        # Since the rowcolumn function is now a member of the class, make sure to refer to the function as self.rowcolumn\n",
     "        \n",
     "        # Your code here:\n",
+    "        np_mat = np.array(mat)\n",
+    "        self.mat = mat\n",
+    "        self.rows = np_mat[0;]\n",
+    "        self.cols = np_mat[;0]\n",
+    "        self.rowcolumn = rowcolumn(self.mat)\n",
     "        \n",
     "        \n",
     "    \n",
@@ -305,7 +324,11 @@
     "    # The only change you need to make is that now we are passing self and mat to the function (make sure self is first).\n",
     "    \n",
     "    # Your code here:\n",
-    "\n",
+    "    def twodim(self, mat):\n",
+    "        if(len(self.rowcolumn) == 2):\n",
+    "            return True\n",
+    "        \n",
+    "        \n",
     "    \n",
     "    # Insert the rowcolumn function here.\n",
     "    # The changes you need to make: \n",
