--- a/module-1/lab-object-oriented-programming/your-code/main.ipynb
+++ b/module-1/lab-object-oriented-programming/your-code/main.ipynb
@@ -107,12 +107,11 @@
    "source": [
     "def twodimrecursive(mat):\n",
     "    # Your code here:\n",
-    "    column = []    \n",
-    "    for row in mat:\n",
-    "        column.append(row[2]) \n",
-    "        if len(column) == 2:\n",
-    "            return True\n",
-    "    return column"
+    "   \n",
+    "   #Esto no se hacerlo, entiendo el concepto de recursividad (una función que se llama a sí misma y tiene un caso base de parada). \n",
+    "   #Pero no se implementarlo en este caso. Sería que, de una forma o de otra (if o else), la función return 'mat'. \n",
+    "   \n",
+    "   "
    ]
   },
   {
