Antes del IronBeer

--- a/module-1/lab-map-reduce-filter/your-code/main.ipynb
+++ b/module-1/lab-map-reduce-filter/your-code/main.ipynb
@@ -12,14 +12,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# import reduce from functools, numpy and pandas\n",
     "from functools import reduce\n",
     "import numpy as np\n",
-    "import pandas as pd\n"
+    "import pandas as pd\n",
+    "import re\n"
    ]
   },
   {
@@ -35,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,12 +58,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "prophet = prophet[568:]\n"
    ]
   },
   {
@@ -74,12 +76,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['PROPHET\\n\\n|Almustafa,',\n",
+       " 'the{7}',\n",
+       " 'chosen',\n",
+       " 'and',\n",
+       " 'the\\nbeloved,',\n",
+       " 'who',\n",
+       " 'was',\n",
+       " 'a',\n",
+       " 'dawn',\n",
+       " 'unto',\n",
+       " 'his']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "prophet[0:11]"
    ]
   },
   {
@@ -93,9 +117,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'the'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def reference(x):\n",
     "    '''\n",
@@ -109,7 +144,12 @@
     "    \n",
     "    # Your code here:\n",
     "    \n",
-    "    "
+    "    #return re.split('{', x)[0]\n",
+    "    #reference(\"the{7}\")\n",
+    "    \n",
+    "    return re.sub(\"\\{.+\", \"\", x)\n",
+    "\n",
+    "reference('the{7}')"
    ]
   },
   {
@@ -121,12 +161,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "prophet_reference = list(map(reference, prophet))"
    ]
   },
   {
